discussion/kv_engine/181923/181923_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

No need for locking for AuditConfig

All usage is from the same thread

Change-Id: I80a846c9b3f4bb3359ad8f2f8f748ceacc1adcf4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-27 09:51:31.000000000
Message: 
Uploaded patch set 5: New patch set was added with same tree, parent, and commit message as Patch Set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 10:04:06.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50762/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50762/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23001/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23001/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11360/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11360/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/271/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/271/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11269/ : ABORTED

Compile error at [2022-10-27T10:03:01.314Z] ../kv_engine/auditd/src/audit.h:119:5:
error: use of undeclared identifier "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11269/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11269/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23981/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23981/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23573/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23573/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24813/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24813/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31998/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31998/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21538/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    event_filter.withWLock([&rewrittenEventFilterJson](auto& filter) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:155:16: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
             (*event_filter.rlock())->to_json().dump());
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:293:14: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    return (*event_filter.rlock())->clone();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:119:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::unique_ptr<AuditEventFilter>> event_filter;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21538/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5:
error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21538/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42605/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/audit.h:119:5:
error: use of undeclared identifier "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42605/ )

CMake error: CMakeLists.txt:156 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42605/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20810/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
